--- a/css/breakout.css
+++ b/css/breakout.css
@@ -19,5 +19,10 @@ canvas {
     background-color: #f0f0f0;
     display: block;
     border-radius: 5px;
+}
+
+h1 {
+    font-size: 45px;
+    color: white;
     
 }
