--- a/css/hangman.css
+++ b/css/hangman.css
@@ -1,74 +1,133 @@
-* {
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
-body {
-    background-color: #34495e;
+*{
+    box-sizing:border-box;
+}
+body{
+    background-color: DarkGoldenRod;
     color: #ffffff;
-    font-family: Helvetica, sans-serif, Arial;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  font-family: "Lobster", sans-serif;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
     height: 80vh;
     margin: 0;
     overflow: hidden;
 }
 
-h1 {
+h1{
     margin: 20px 0 0;
 }
 
-.game-container {
+.game-container{
     padding: 20px 30px;
-    position: relative;
-    margin: auto;
-    height: 350px;
-    width: 450px;
+    position:relative;
+    margin:auto;
+    height:350px;
+    width:450px;
 }
-
-.figure-container {
-    fill: transparent;
-    stroke: #ffffff;
+.figure-container{
+    fill:transparent;
+    stroke:white;
     stroke-width: 4px;
-    stroke-linecap: round;
+    stroke-linecap:round;
 }
 
-.figure-part {
-    display: none;
+.figure-part{
+    display:none;
 }
 
-.wrong-letters-container {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: flex;
+.wrong-letters-container{
+    position:absolute;
+    top:20px;
+    right:20px;
+    display:flex;
     flex-direction: column;
-    text-align: right;
+    text-align:right;
 }
 
-.wrong-letters-container p {
+.wrong-letters-container p{
     margin: 0 0 5px;
 }
 
-.wrong-letters-container span {
+.wrong-letters-container span{
     font-size: 24px;
 }
 
-.word {
-    display: flex;
+.word{
+    display:flex;
     position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
 }
 
-.letter {
+.letter{
     font-size: 30px;
     display: inline-flex;
+    align-items:center;
+    justify-content:center;
+    height:50px;
+    width:20px;
+    margin: 0 3px;
+    border-bottom: 3px solid #424242;
+}
+
+.popup-container
+{
+    background-color: rgba(0,0,0,0.3);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* display: flex; */
+    display: none;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    width: 20px;
-    margin: 0 3px;
-    border-bottom: 3px solid #2980b9;
+}
+
+.popup
+{
+    background: #424242;
+    border-radius: 2px;
+    box-shadow: 0 0px 2px 2px rgba(0,0,0,0.5);
+    padding: 20px;
+    text-align: center;
+}
+
+.popup button
+{
+    cursor: pointer;
+    background-color: DarkSlateGrey;
+    color: #ffffff;
+    margin-top: 20px;
+    padding: 12px 20px;
+    font-size: 16px;
+}
+
+.popup button:active
+{
+    transform: scale(0.98);
+}
+
+.notification-container
+{
+    background-color: DarkSlateGrey;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 2px 2px 0 0;
+    position: absolute;
+    bottom: -500px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.notification-container
+{
+    margin: 0;
+}
+
+.notification-container.show
+{
+    transform: translateY(-500px);
 }
