--- a/css/breakout.css
+++ b/css/breakout.css
@@ -1,38 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap');
 
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #0095dd;
+    background-color: blue;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     margin: 0;
-    font-family: "Ojuju", sans-serif;
+    font-family: "Jacquard 12", system-ui;
 }
 
 canvas {
-    background-color: #f0f0f0;
+    background: #F0F0F0;
     display: block;
-    border-radius: 5px;
+    border-radius: 4px;
 }
 
 h1 {
-    font-size: 45px;
+    font-size: 48px;
     color: white;
+
 }
 
 .btn {
     cursor: pointer;
     border: 0;
-    padding: 10px 20px;
-    background: black;
-    color: white;
-    border-radius: 5px;
+    padding: 8px 16px;
+    background: #000000;
+    color: #FFFFFF;
+    border-radius: 2px;
 }
 
 .btn:hover {
@@ -40,7 +41,7 @@ h1 {
 }
 
 .btn:active {
-    transform: scale(0.98);
+    transform: scale(0.9);
 }
 
 .rules-btn {
@@ -53,13 +54,13 @@ h1 {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #333333;
-    color: white;
+    background: #333333;
+    color: #ffffff;
     min-height: 100vh;
-    width: 400px;
-    padding: 20px;
+    width: 384px;
+    padding: 16px;
     line-height: 1.5;
-    transform: translateX(-400px);
+    transform: translateX(-384px);
     transition: transform 1s ease-in-out;
 }
 
